Refactor application configuration for local and production profiles, update Docker setup, and enhance CORS handling